# fluxft

./: README.md  pyproject.toml  repomix-output.xml  requirements.txt  runpod_launch.sh
Axolot/: autorun.sh  axotl_config.yaml  config.py  convert.py  datasets.py  evaluate,py  logging_config.py  prompt_tokenizer.py  prompters.py  train.py
configs/: runpod_config.yaml
fluxft/: __init__.py  cli.py  config.py  utils.py
fluxft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fluxft/data/: collate.py  loader.py
fluxft/eval/: evaluator.py
fluxft/lora/: patcher.py
fluxft/search/: hp_search.py
fluxft/train/: tokenizer_util.py  trainer.py
scripts/: clean_accelerate_config.py  clean_xformers_warning.py
sorted_art/Abstract-Art/: metadata.json
sorted_art/Abstract-Expressionism/: metadata.json
sorted_art/Analytical-Cubism/: metadata.json
sorted_art/Art-Nouveau-(Modern)/: metadata.json
sorted_art/Baroque/: generate_baroque_txts.py  metadata.json
sorted_art/Cloisonnism/: metadata.json
sorted_art/Cubism/: metadata.json
sorted_art/Dada/: metadata.json
sorted_art/Early-Renaissance/: metadata.json
sorted_art/Expressionism/: metadata.json
sorted_art/High-Renaissance/: metadata.json
sorted_art/Naïve-Art-(Primitivism)/: metadata.json
sorted_art/Op-Art/: metadata.json
sorted_art/Pointillism/: metadata.json
sorted_art/Post-Impressionism/: metadata.json
sorted_art/Surrealism/: metadata.json
sorted_art/Symbolism/: metadata.json
tests/: test_loader.py  test_lora.py  test_metrics.py
(+2 files in other folders)
