[project]
name = "fluxft"
version = "0.1.0"
description = "LoRA fine-tuning toolkit for FLUX 1-schnell."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "torch>=2.1",
  "diffusers>=0.27.0",
  "peft>=0.10.0",
  "accelerate>=0.25.0",
  "transformers>=4.40",
  "torchmetrics>=1.3",
  "torch-fidelity>=0.4",
  "datasets>=2.19",
  "pydantic>=2.7",
  "typer[all]>=0.9",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fluxft"]

[project.scripts]
fluxft = "fluxft.cli:app"